--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 repository = "https://github.com/StarrFox/wiztype"
 
 [tool.poetry.dependencies]
-python = "^3.11rc2"
+python = "^3.10"
 click = "^8.1.3"
-memobj = "^0.7.0"
+memobj = {git = "https://github.com/StarrFox/memobj", rev = "3.10"}
 
 
 [build-system]
