--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/StarrFox/wiztype"
 [tool.poetry.dependencies]
 python = "^3.11rc2"
 click = "^8.1.3"
-memobj = {git = "https://github.com/StarrFox/memobj"}
+memobj = "^0.7.1"
 
 
 [build-system]
