--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.11rc2"
 click = "^8.1.3"
 memobj = "^0.7.1"
 
+[tool.poetry.scripts]
+wiztype = "wiztype.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
