--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/StarrFox/wiztype"
 
 [tool.poetry.dependencies]
-python = "^3.11rc2"
+python = "^3.10"
 click = "^8.1.3"
 memobj = "^0.8.1"
 
