--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 repository = "https://github.com/StarrFox/wiztype"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 click = "^8.1.3"
-memobj = ">=0.8.1,<0.10.0"
+memobj = "^0.9.2"
 iced-x86 = "^1.17.0"
 
 [tool.poetry.scripts]
